优化部分代码结构